--- a/css/custom.css
+++ b/css/custom.css
@@ -2,4 +2,8 @@
     margin-top: 50px;
     margin-left: 0px;
     padding: 40px;
+    padding-bottom: 50px;
+}
+.card{
+    border: 3px solid red;
 }
